--- a/index.html
+++ b/index.html
@@ -1,4 +1,22 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTrCM1t2xQWFk1uaczpD8T4LGtVOdhPJQ"></script><link rel=icon href=/favicon.ico><title>Mezzo Hotel</title><link href=/css/app.deb77410.css rel=preload as=style><link href=/css/chunk-vendors.3b454221.css rel=preload as=style><link href=/js/app.6b841422.js rel=preload as=script><link href=/js/chunk-vendors.5ecab164.js rel=preload as=script><link href=/css/chunk-vendors.3b454221.css rel=stylesheet><link href=/css/app.deb77410.css rel=stylesheet></head><body><script>window.fbAsyncInit = function() {
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTrCM1t2xQWFk1uaczpD8T4LGtVOdhPJQ"></script><link rel=icon href=/favicon.ico><title>Mezzo Hotel</title><link href=/css/app.deb77410.css rel=preload as=style><link href=/css/chunk-vendors.3b454221.css rel=preload as=style><link href=/js/app.6b841422.js rel=preload as=script><link href=/js/chunk-vendors.5ecab164.js rel=preload as=script><link href=/css/chunk-vendors.3b454221.css rel=stylesheet><link href=/css/app.deb77410.css rel=stylesheet>
+<!-- Facebook Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '662586500741018');
+  fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=662586500741018&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code -->
+</head><body><script>window.fbAsyncInit = function() {
         FB.init({
           appId            : '195290608225017',
           autoLogAppEvents : true,
