--- a/index.html
+++ b/index.html
@@ -1,28 +1,67 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTrCM1t2xQWFk1uaczpD8T4LGtVOdhPJQ"></script><link rel=icon href=/favicon.ico><title>Mezzo Hotel</title><script>!function(f,b,e,v,n,t,s)
-      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-      n.queue=[];t=b.createElement(e);t.async=!0;
-      t.src=v;s=b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t,s)}(window, document,'script',
-      'https://connect.facebook.net/en_US/fbevents.js');
-      fbq('init', '510542799813313');
-      fbq('track', 'PageView');</script><noscript><img height=1 width=1 style=display:none src="https://www.facebook.com/tr?id=510542799813313&ev=PageView&noscript=1"></noscript><script async src="https://www.googletagmanager.com/gtag/js?id=UA-178423722-1"></script><script>window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-178423722-1');</script><meta property=og:url content=http://mezzohotel.com><meta property=og:type content=article><meta name=og:title content="Mezzo Hotel: Cebu City’s 4-Star Business Hotel"><meta property=og:description content="Located right in the heart of the island of Cebu, 4-star Mezzo Hotel sets its very own standard of luxury and minimalism by offering a haven for comfort and relaxation. At Mezzo, we have dedicated ourselves to provide excellent service, delightful cuisines, and a fully-customized experience -- nothing short of true Filipino hospitality."><meta property=og:image content=http://mezzohotel.com/img/main2_72.jpg><meta name=twitter:title content="Mezzo Hotel: Cebu City’s 4-Star Business Hotel"><meta name=twitter:description content="Located right in the heart of the island of Cebu, 4-star Mezzo Hotel sets its very own standard of luxury and minimalism by offering a haven for comfort and relaxation. At Mezzo, we have dedicated ourselves to provide excellent service, delightful cuisines, and a fully-customized experience -- nothing short of true Filipino hospitality."><meta name=twitter:image content=https://mezzohotel.com/img/main2_72.jpg><meta name=twitter:card content=summary_large_image><link href=/css/app~21833f8f.8d8b3180.css rel=preload as=style><link href=/css/app~21e8bd9d.b278d1ed.css rel=preload as=style><link href=/css/app~d0ae3f07.67f5b5d2.css rel=preload as=style><link href=/css/chunk-vendors~205977d4.1c7f9e6d.css rel=preload as=style><link href=/css/chunk-vendors~4dff01e7.f6f30965.css rel=preload as=style><link href=/js/app~21833f8f.3c656fa4.js rel=preload as=script><link href=/js/app~21e8bd9d.f7bae3b7.js rel=preload as=script><link href=/js/app~d0ae3f07.567be714.js rel=preload as=script><link href=/js/chunk-vendors~00cb062a.af506228.js rel=preload as=script><link href=/js/chunk-vendors~14b916ce.5c325efb.js rel=preload as=script><link href=/js/chunk-vendors~205977d4.1a167025.js rel=preload as=script><link href=/js/chunk-vendors~4b106089.36f6ee89.js rel=preload as=script><link href=/js/chunk-vendors~4dff01e7.32fe7b30.js rel=preload as=script><link href=/js/chunk-vendors~4e44fb25.88200712.js rel=preload as=script><link href=/js/chunk-vendors~82b88a00.735cb024.js rel=preload as=script><link href=/js/chunk-vendors~987e6011.1b12d558.js rel=preload as=script><link href=/js/chunk-vendors~ac0f77ce.738a5209.js rel=preload as=script><link href=/js/chunk-vendors~f0dd280a.f2ad27d7.js rel=preload as=script><link href=/js/chunk-vendors~fdc6512a.7e278ff4.js rel=preload as=script><link href=/css/chunk-vendors~4dff01e7.f6f30965.css rel=stylesheet><link href=/css/chunk-vendors~205977d4.1c7f9e6d.css rel=stylesheet><link href=/css/app~d0ae3f07.67f5b5d2.css rel=stylesheet><link href=/css/app~21833f8f.8d8b3180.css rel=stylesheet><link href=/css/app~21e8bd9d.b278d1ed.css rel=stylesheet></head><body><script>window.fbAsyncInit = function() {
-        FB.init({
-          appId            : '195290608225017',
-          autoLogAppEvents : true,
-          xfbml            : true,
-          version          : 'v6.0'
-        });
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTrCM1t2xQWFk1uaczpD8T4LGtVOdhPJQ"></script><link rel=icon href=/favicon.ico><title>Mezzo Hotel</title><script>!function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
-      (function(d, s, id) {
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '510542799813313');
+    fbq('track', 'PageView');</script><noscript><img height=1 width=1 style=display:none src="https://www.facebook.com/tr?id=510542799813313&ev=PageView&noscript=1"></noscript><script async src="https://www.googletagmanager.com/gtag/js?id=UA-178423722-1"></script><script>window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-178423722-1');</script><meta property=og:url content=http://mezzohotel.com><meta property=og:type content=article><meta name=og:title content="Mezzo Hotel: Cebu City’s 4-Star Business Hotel"><meta property=og:description content="Located right in the heart of the island of Cebu, 4-star Mezzo Hotel sets its very own standard of luxury and minimalism by offering a haven for comfort and relaxation. At Mezzo, we have dedicated ourselves to provide excellent service, delightful cuisines, and a fully-customized experience -- nothing short of true Filipino hospitality."><meta property=og:image content=http://mezzohotel.com/img/main2_72.jpg><meta name=twitter:title content="Mezzo Hotel: Cebu City’s 4-Star Business Hotel"><meta name=twitter:description content="Located right in the heart of the island of Cebu, 4-star Mezzo Hotel sets its very own standard of luxury and minimalism by offering a haven for comfort and relaxation. At Mezzo, we have dedicated ourselves to provide excellent service, delightful cuisines, and a fully-customized experience -- nothing short of true Filipino hospitality."><meta name=twitter:image content=https://mezzohotel.com/img/main2_72.jpg><meta name=twitter:card content=summary_large_image><link rel=stylesheet type=text/css href=https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css><style>.cc-btn.cc-allow:hover {
+      background: "#cbab58";
+      color: "#ffffff"
+    }
+
+    @media screen and (max-width:  992px){
+      .cc-color-override-1786453129.cc-window{
+        display: none;
+      }
+
+      .cc-window.cc-floating .cc-compliance{
+        -webkit-box-flex: unset;
+        flex:  unset;
+      }
+    }</style><link href=/css/app~21833f8f.c5557b01.css rel=preload as=style><link href=/css/app~21e8bd9d.b3f14458.css rel=preload as=style><link href=/css/app~58e102f6.50d61b9e.css rel=preload as=style><link href=/css/app~9db30fce.a2230416.css rel=preload as=style><link href=/css/app~d0ae3f07.5770d274.css rel=preload as=style><link href=/css/chunk-vendors~205977d4.1c7f9e6d.css rel=preload as=style><link href=/css/chunk-vendors~4dff01e7.f6f30965.css rel=preload as=style><link href=/js/app~21833f8f.040d207a.js rel=preload as=script><link href=/js/app~21e8bd9d.17182db5.js rel=preload as=script><link href=/js/app~58e102f6.56affa24.js rel=preload as=script><link href=/js/app~9db30fce.fba41eca.js rel=preload as=script><link href=/js/app~d0ae3f07.3625bfc2.js rel=preload as=script><link href=/js/chunk-vendors~00cb062a.af506228.js rel=preload as=script><link href=/js/chunk-vendors~14b916ce.5c325efb.js rel=preload as=script><link href=/js/chunk-vendors~205977d4.1a167025.js rel=preload as=script><link href=/js/chunk-vendors~4b106089.36f6ee89.js rel=preload as=script><link href=/js/chunk-vendors~4dff01e7.32fe7b30.js rel=preload as=script><link href=/js/chunk-vendors~4e44fb25.88200712.js rel=preload as=script><link href=/js/chunk-vendors~82b88a00.735cb024.js rel=preload as=script><link href=/js/chunk-vendors~987e6011.1b12d558.js rel=preload as=script><link href=/js/chunk-vendors~ac0f77ce.738a5209.js rel=preload as=script><link href=/js/chunk-vendors~f0dd280a.f2ad27d7.js rel=preload as=script><link href=/js/chunk-vendors~fdc6512a.7e278ff4.js rel=preload as=script><link href=/css/chunk-vendors~4dff01e7.f6f30965.css rel=stylesheet><link href=/css/chunk-vendors~205977d4.1c7f9e6d.css rel=stylesheet><link href=/css/app~d0ae3f07.5770d274.css rel=stylesheet><link href=/css/app~21833f8f.c5557b01.css rel=stylesheet><link href=/css/app~58e102f6.50d61b9e.css rel=stylesheet><link href=/css/app~21e8bd9d.b3f14458.css rel=stylesheet><link href=/css/app~9db30fce.a2230416.css rel=stylesheet></head><body><script>window.fbAsyncInit = function () {
+      FB.init({
+        appId: '195290608225017',
+        autoLogAppEvents: true,
+        xfbml: true,
+        version: 'v6.0'
+      });
+    };
+    (function (d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
       js = d.createElement(s); js.id = id;
       js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
       fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script><script async defer src=https://connect.facebook.net/en_US/sdk.js></script><div class=fb-customerchat page_id=868630263266919 theme_color=#cbab58 logged_in_greeting="How can we help you?" logged_out_greeting="How can we help you?" greeting_dialog_display=hide></div><noscript><strong>We're sorry but mezzo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors~14b916ce.5c325efb.js></script><script src=/js/chunk-vendors~ac0f77ce.738a5209.js></script><script src=/js/chunk-vendors~82b88a00.735cb024.js></script><script src=/js/chunk-vendors~4dff01e7.32fe7b30.js></script><script src=/js/chunk-vendors~f0dd280a.f2ad27d7.js></script><script src=/js/chunk-vendors~987e6011.1b12d558.js></script><script src=/js/chunk-vendors~4e44fb25.88200712.js></script><script src=/js/chunk-vendors~00cb062a.af506228.js></script><script src=/js/chunk-vendors~4b106089.36f6ee89.js></script><script src=/js/chunk-vendors~fdc6512a.7e278ff4.js></script><script src=/js/chunk-vendors~205977d4.1a167025.js></script><script src=/js/app~d0ae3f07.567be714.js></script><script src=/js/app~21833f8f.3c656fa4.js></script><script src=/js/app~21e8bd9d.f7bae3b7.js></script></body></html>
+    }(document, 'script', 'facebook-jssdk'));</script><script async defer src=https://connect.facebook.net/en_US/sdk.js></script><div class=fb-customerchat page_id=868630263266919 theme_color=#cbab58 logged_in_greeting="How can we help you?" logged_out_greeting="How can we help you?" greeting_dialog_display=hide></div><noscript><strong>We're sorry but mezzo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script>window.cookieconsent.initialise({
+      "palette": {
+        "popup": {
+          "background": "#ffffff",
+          "text": "#212529"
+        },
+        "button": {
+          "background": "#000033",
+          "text": "#ffffff"
+        }
+      },
+      "theme": "classic",
+      "position": "bottom-right",
+      "type": "opt-in",
+      "content": {
+        "message": "We use cookies on our website to give you the most relevant experience by remembering your preferences and repeat visits. By clicking “Accept”, you consent to the use of ALL the cookies.",
+        "dismiss": "Got it!",
+        "allow": "Accept",
+        "deny": "Decline",
+        "link": "Privacy Policy",
+        "href": "https://mezzohotel.com/privacy-policy"
+      }
+    });</script><script src=/js/chunk-vendors~14b916ce.5c325efb.js></script><script src=/js/chunk-vendors~ac0f77ce.738a5209.js></script><script src=/js/chunk-vendors~82b88a00.735cb024.js></script><script src=/js/chunk-vendors~4dff01e7.32fe7b30.js></script><script src=/js/chunk-vendors~f0dd280a.f2ad27d7.js></script><script src=/js/chunk-vendors~987e6011.1b12d558.js></script><script src=/js/chunk-vendors~4e44fb25.88200712.js></script><script src=/js/chunk-vendors~00cb062a.af506228.js></script><script src=/js/chunk-vendors~4b106089.36f6ee89.js></script><script src=/js/chunk-vendors~fdc6512a.7e278ff4.js></script><script src=/js/chunk-vendors~205977d4.1a167025.js></script><script src=/js/app~d0ae3f07.3625bfc2.js></script><script src=/js/app~21833f8f.040d207a.js></script><script src=/js/app~58e102f6.56affa24.js></script><script src=/js/app~21e8bd9d.17182db5.js></script><script src=/js/app~9db30fce.fba41eca.js></script></body></html>
