--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTrCM1t2xQWFk1uaczpD8T4LGtVOdhPJQ"></script><link rel=icon href=/favicon.ico><title>Mezzo Hotel, Cebu City - Official Site | Cebu City’s 4-Star Business Hotel</title><script>!function (f, b, e, v, n, t, s) {
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>Mezzo Hotel, Cebu City - Official Site | Cebu City’s 4-Star Business Hotel</title><script>!function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
           n.callMethod.apply(n, arguments) : n.queue.push(arguments)
